--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "repository": {},
   "scripts": {
+    "build": "babel src -d build",
     "start": "babel-node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
